creation of header & nav

--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
             <div href="home" class="logo">
                 <h4>PICTURES</h4>
             </div>
-            <ul class="nav-links">
-                <li><a href="#stories" class="stories">Stories</a></li>
-                <li><a href="#features" class="features">Features</a></li>
-                <li><a href="#contact" class="contact">Contact</a></li>
-            </ul>
-            <div class="burger">
-                <li><a class="burger""><i class="fas fa-bars"></i></a></li>
+            <div class="nav-links">
+                <a href="#stories" class="stories">Stories</a>
+                <a href="#features" class="features">Features</a>
+                <a href="#contact" class="contact">Contact</a>
+                <a class="burger""><i class="fas fa-bars"></i></a>
             </div>
-       
         </nav>
-        <!-- <h1> Let your soul speak </h1>
-        <h2>bla bla</h2>
-        <a href="#stories" id="camera-image"><i class="fas fa-camera"></i></a> -->
+        <h1> Let your soul speak </h1>
     </header>
+    <section class="stories"></section>
 </body>
 </html>
