create v1 stories part

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </nav>
         <h1> Let your soul speak </h1>
     </header>
-    <section class="stories"></section>
+    <section class="stories-container">
+            <h2 class="title-p1">Create and share</h2>
+            <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
+            <div class="stories-picture">
+            <!-- second part to finish -->
+            <!-- <div class="stories-picture2"></div>
+            <h2 class="title-p2">Create and share</h2>
+            <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p> -->
+        </div>
+    </section>
 </body>
 </html>
