--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@
     <section class="stories-container">
             <h2 class="title-p1">Create and share</h2>
             <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
-            <div class="stories-picture">
-            <!-- second part to finish -->
-            <!-- <div class="stories-picture2"></div>
-            <h2 class="title-p2">Create and share</h2>
-            <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p> -->
-        </div>
+            <div class="stories-picture" alt='misty forest'></div>
+            <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
+            <div class="stories-picture-2"></div>
     </section>
 </body>
 </html>
