--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h1> Let your soul speak </h1>
     </header>
     <section class="stories-container">
-            <h2 class="title-p1">Create and share</h2>
-            <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
-            <div class="stories-picture" alt='misty forest'></div>
-            <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
-            <div class="stories-picture-2"></div>
+        <h2 class="title-p1">Stories and creation</h2>
+        <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
+        <div class="stories-picture" alt='misty forest'></div>
+        <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
+        <div class="stories-picture-2" alt='misty forest with a man wearing a yellow rain jacket'></div>></div>
     </section>
 </body>
 </html>
