--- a/index.html
+++ b/index.html
@@ -33,5 +33,29 @@
         <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
         <div class="stories-picture-2" alt='misty forest with a man wearing a yellow rain jacket'></div>></div>
     </section>
+    <section class="features-galery">
+            <h2 class="features-title">Features</h2>
+            <div class="image1">
+                <img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/>
+            </div>
+            <div class="image2">
+                <img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/>
+            </div>
+            <div class="image3">
+                <img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/>
+            </div>
+            <div class="image4">
+                <img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/>
+            </div>
+            <div class="image5">
+                <img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/>
+            </div>
+            <div class="image6">
+                <img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/>
+            </div>
+            <div class="image7">
+                <img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/>
+            </div>           
+    </section>
 </body>
 </html>
