set up stories and features section v3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
         <div class="stories-picture-2" alt='misty forest with a man wearing a yellow rain jacket'></div>></div>
     </section>
-    <section class="features-galery">
+    <section class="features-container">
             <h2 class="features-title">Features</h2>
             <div class="image1">
                 <img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/>
@@ -56,6 +56,9 @@
             <div class="image7">
                 <img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/>
             </div>           
+    </section>
+    <section class="contact-container">
+
     </section>
 </body>
 </html>
