creation of the contact part

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </div>           
     </section>
     <section class="contact-container">
-
+        <a class="contact-title" href="#">Contact</a>
+        <p class="contact-p">Dont hesitate to contact us for more information and to work together</p>
     </section>
 </body>
 </html>
