--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mini-Project to training -> Pictures Website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet">
     <link href="CSS/mediaQueries.css" rel="stylesheet">
@@ -60,6 +61,11 @@
     <section class="contact-container">
         <a class="contact-title" href="#">Contact</a>
         <p class="contact-p">Dont hesitate to contact us for more information and to work together</p>
+        <div class="items-font">
+            <a><i class="fas fa-pen-square"></i></a>
+            <a><i class="fab fa-linkedin"></i></a>
+            <a><i class="fab fa-github"></i></a>
+        </div>
     </section>
 </body>
 </html>
