make contact part responsive

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             </div>           
     </section>
     <section class="contact-container">
-        <a class="contact-title" href="#">Contact</a>
+        <h2 class="contact-title">Contact Us</h2>
         <p class="contact-p">Dont hesitate to contact us for more information and to work together</p>
         <div class="items-font">
-            <a><i class="fas fa-pen-square"></i></a>
-            <a><i class="fab fa-linkedin"></i></a>
-            <a><i class="fab fa-github"></i></a>
+            <a href="mailto:nicolasgolob@gmail.com"><i class="fas fa-pen-square"></i></a>
+            <a href="https://www.linkedin.com/in/nicolas-golob/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
     </section>
 </body>
