--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Pictures | Let your soul speak</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header id="fixed">
+        <nav class="fade-in navbar" >
             <div href="home" class="logo">
                 <h4>PICTURES</h4>
             </div>
@@ -25,7 +25,7 @@
                 <a class="burger""><i class="fas fa-bars"></i></a>
             </div>
         </nav>
-        <h1> Let your soul speak </h1>
+        <h1 class="fade-in-main-title"> Let your soul speak </h1>
     </header>
     <section class="stories-container">
         <h2 class="title-p1">Stories and creation</h2>
@@ -67,5 +67,6 @@
             <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
     </section>
+    <script src="app.js"></script>
 </body>
 </html>
