animations of the features section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet">
+    <link href="Css/lightbox.min.css" rel="stylesheet">
     <link href="CSS/mediaQueries.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <title>Pictures | Let your soul speak</title>
@@ -37,26 +38,26 @@
     <section class="features-container">
             <h2 class="features-title">Features</h2>
             <div class="image1">
-                <img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/>
+                <a data-lightbox="mygallery" href="image/view_of_a_road_from_a_forest.jpg"><img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/></a>
             </div>
             <div class="image2">
-                <img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/>
+                <a href="image/forestry_road.jpg"><img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/></a>
             </div>
             <div class="image3">
-                <img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/>
+                <a href="image/free-fall_in_a_forest.jpg"><img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/></a>
             </div>
             <div class="image4">
-                <img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/>
+                <a href="image/in_the_forest.jpg"><img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/></a>
             </div>
             <div class="image5">
-                <img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/>
+                <a href="image/misty_forest_road.jpg"><img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/></a>
             </div>
             <div class="image6">
-                <img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/>
+                <a href="image/forest_mist_main_image.jpg"><img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/></a>
             </div>
             <div class="image7">
-                <img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/>
-            </div>           
+                <a href="image/man_with_rain_jacket_in_the_misty_forest.jpg"><img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/></a>
+            </div>  
     </section>
     <section class="contact-container">
         <h2 class="contact-title">Contact Us</h2>
@@ -67,6 +68,8 @@
             <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
     </section>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
+ 
 </body>
 </html>
