--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
     </section>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
- 
+    <script type="text/javascript" src="Js/app.js"></script>
+    <script type="text/javascript" src="Js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
