--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
                 <a data-lightbox="mygallery" href="image/view_of_a_road_from_a_forest.jpg"><img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/></a>
             </div>
             <div class="image2">
-                <a href="image/forestry_road.jpg"><img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/forestry_road.jpg"><img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/></a>
             </div>
             <div class="image3">
-                <a href="image/free-fall_in_a_forest.jpg"><img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/free-fall_in_a_forest.jpg"><img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/></a>
             </div>
             <div class="image4">
-                <a href="image/in_the_forest.jpg"><img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/in_the_forest.jpg"><img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/></a>
             </div>
             <div class="image5">
-                <a href="image/misty_forest_road.jpg"><img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/misty_forest_road.jpg"><img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/></a>
             </div>
             <div class="image6">
-                <a href="image/forest_mist_main_image.jpg"><img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/forest_mist_main_image.jpg"><img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/></a>
             </div>
             <div class="image7">
-                <a href="image/man_with_rain_jacket_in_the_misty_forest.jpg"><img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/></a>
+                <a data-lightbox="mygallery" href="image/man_with_rain_jacket_in_the_misty_forest.jpg"><img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/></a>
             </div>  
     </section>
     <section class="contact-container">
