--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Pictures | Let your soul speak</title>
 </head>
 <body>
-    <header id="fixed">
-        <nav class="fade-in navbar" >
+    <header>
+        <nav class="fade-in navbar" id="navigation">
             <div href="home" class="logo">
                 <h4>PICTURES</h4>
             </div>
@@ -29,7 +29,7 @@
         <h1 class="fade-in-main-title"> Let your soul speak </h1>
     </header>
     <section class="stories-container">
-        <h2 class="title-p1">Stories and creation</h2>
+        <blockquote class="title-p1">Stories and creation</blockquote>
         <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
         <div class="stories-picture" alt='misty forest'></div>
         <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
@@ -70,5 +70,6 @@
     </section>
     <script type="text/javascript" src="Js/app.js"></script>
     <script type="text/javascript" src="Js/lightbox-plus-jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js    "></script>
 </body>
 </html>
