--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>Pictures | Let your soul speak</title>
 </head>
 <body>
-    <header>
+    <header id="home">
         <nav class="fade-in navbar" id="navigation">
-            <div href="home" class="logo">
+            <a href="#home" class="logo">
                 <h4>PICTURES</h4>
-            </div>
+            </a>
             <div class="nav-links">
                 <a href="#stories" class="stories">Stories</a>
                 <a href="#features" class="features">Features</a>
@@ -28,14 +28,14 @@
         </nav>
         <h1 class="fade-in-main-title"> Let your soul speak </h1>
     </header>
-    <section class="stories-container">
+    <section class="stories-container" id="stories">
         <blockquote class="title-p1">Stories and creation</blockquote>
         <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
         <div class="stories-picture" alt='misty forest'></div>
         <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
         <div class="stories-picture-2" alt='misty forest with a man wearing a yellow rain jacket'></div>></div>
     </section>
-    <section class="features-container">
+    <section class="features-container" id="features">
             <h2 class="features-title">Features</h2>
             <div class="image1">
                 <a data-lightbox="mygallery" href="image/view_of_a_road_from_a_forest.jpg"><img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/></a>
@@ -59,7 +59,7 @@
                 <a data-lightbox="mygallery" href="image/man_with_rain_jacket_in_the_misty_forest.jpg"><img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/></a>
             </div>  
     </section>
-    <section class="contact-container">
+    <section class="contact-container" id="contact">
         <h2 class="contact-title">Contact Us</h2>
         <p class="contact-p">Dont hesitate to contact us for more information and to work together</p>
         <div class="items-font">
