creation of elements to go to the top of the page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <a href="https://www.linkedin.com/in/nicolas-golob/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
+        <a href='#home' class="arrow"><i class="fas fa-arrow-circle-up"></i></a>
     </section>
     <script type="text/javascript" src="Js/app.js"></script>
     <script type="text/javascript" src="Js/lightbox-plus-jquery.min.js"></script>
