--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="CSS/style.css" rel="stylesheet">
     <link href="Css/lightbox.min.css" rel="stylesheet">
     <link href="CSS/mediaQueries.css" rel="stylesheet">
+    <link rel="stylesheet" media="only screen and (width:360px) and (height:640px)" href="Css/galaxy.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <title>Pictures | Let your soul speak</title>
 </head>
