make responsive galaxy iphone pixel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="Css/lightbox.min.css" rel="stylesheet">
     <link href="CSS/mediaQueries.css" rel="stylesheet">
     <link rel="stylesheet" media="only screen and (width:360px) and (height:640px)" href="Css/galaxy.css">
+    <link rel="stylesheet" media="only screen and (width:411px) and (height:731px)" href="Css/pixel2.css">
+    <link rel="stylesheet" media="only screen and (width:320px) and (height:568px)" href="Css/iphone5_SE.css">
+    <link rel="stylesheet" media="only screen and (width:375px) and (height:667px)" href="Css/iphone6_7_8.css">
+    <link rel="stylesheet" media="only screen and (width:414px) and (height:736px)" href="Css/iphone6_7_8PLUS.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <title>Pictures | Let your soul speak</title>
 </head>
