make all ipads responsive

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" media="only screen and (width:320px) and (height:568px)" href="Css/iphone5_SE.css">
     <link rel="stylesheet" media="only screen and (width:375px) and (height:667px)" href="Css/iphone6_7_8.css">
     <link rel="stylesheet" media="only screen and (width:414px) and (height:736px)" href="Css/iphone6_7_8PLUS.css">
+    <link rel="stylesheet" media="only screen and (width:768px) and (height:1024px)" href="Css/ipad.css">
+    <link rel="stylesheet" media="only screen and (width:1024px) and (height:1366px)" href="Css/ipad_pro.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <title>Pictures | Let your soul speak</title>
 </head>
