scroll effects stories part

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" media="only screen and (width:768px) and (height:1024px)" href="Css/ipad.css">
     <link rel="stylesheet" media="only screen and (width:1024px) and (height:1366px)" href="Css/ipad_pro.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
     <title>Pictures | Let your soul speak</title>
 </head>
 <body>
@@ -36,7 +38,7 @@
         <h1 class="fade-in-main-title"> Let your soul speak </h1>
     </header>
     <section class="stories-container" id="stories">
-        <blockquote class="title-p1">Stories and creation</blockquote>
+        <h2 class="title-p1">Stories and creation</h2>
         <p class="text-p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia.</p>
         <div class="stories-picture" alt='misty forest'></div>
         <p class="text-p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex commodi corrupti inventore dolores nobis. Sed, reiciendis quisquam repellat magnam fuga voluptates. Sit, iusto quia doloremque doloribus eligendi eos architecto officia. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est velit eius, debitis magnam nemo sequi optio quasi similique a incidunt recusandae. Nobis animi libero perferendis nesciunt enim mollitia impedit voluptatum!</p>
@@ -78,6 +80,6 @@
     </section>
     <script type="text/javascript" src="Js/app.js"></script>
     <script type="text/javascript" src="Js/lightbox-plus-jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js    "></script>
+
 </body>
 </html>
