creation of a scroll effect on the features section

--- a/index.html
+++ b/index.html
@@ -46,40 +46,39 @@
     </section>
     <section class="features-container" id="features">
             <h2 class="features-title">Features</h2>
-            <div class="image1">
+            <div class="image1 galery">
                 <a data-lightbox="mygallery" href="image/view_of_a_road_from_a_forest.jpg"><img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/></a>
             </div>
-            <div class="image2">
+            <div class="image2 galery">
                 <a data-lightbox="mygallery" href="image/forestry_road.jpg"><img src="image/forestry_road.jpg" alt="forestry road" class="galery-image"/></a>
             </div>
-            <div class="image3">
+            <div class="image3 galery">
                 <a data-lightbox="mygallery" href="image/free-fall_in_a_forest.jpg"><img src="image/free-fall_in_a_forest.jpg" alt="free-fall in a forest" class="galery-image"/></a>
             </div>
-            <div class="image4">
+            <div class="image4 galery">
                 <a data-lightbox="mygallery" href="image/in_the_forest.jpg"><img src="image/in_the_forest.jpg" alt="in the forest" class="galery-image"/></a>
             </div>
-            <div class="image5">
+            <div class="image5 galery">
                 <a data-lightbox="mygallery" href="image/misty_forest_road.jpg"><img src="image/misty_forest_road.jpg" alt="misty forest road" class="galery-image"/></a>
             </div>
-            <div class="image6">
+            <div class="image6 galery">
                 <a data-lightbox="mygallery" href="image/forest_mist_main_image.jpg"><img src="image/forest_mist_main_image.jpg" alt="forest mist main image" class="galery-image"/></a>
             </div>
-            <div class="image7">
+            <div class="image7 galery">
                 <a data-lightbox="mygallery" href="image/man_with_rain_jacket_in_the_misty_forest.jpg"><img src="image/man_with_rain_jacket_in_the_misty_forest.jpg" alt="man with rain jacket in the misty forest" class="galery-image"/></a>
             </div>  
     </section>
     <section class="contact-container" id="contact">
-        <h2 class="contact-title">Contact Us</h2>
-        <p class="contact-p">Dont hesitate to contact us for more information and to work together</p>
-        <div class="items-font">
+        <h2 class="contact-title contact">Contact Us</h2>
+        <p class="contact-p contact">Dont hesitate to contact us for more information and to work together</p>
+        <div class="items-font contact">
             <a href="mailto:nicolasgolob@gmail.com"><i class="fas fa-pen-square"></i></a>
             <a href="https://www.linkedin.com/in/nicolas-golob/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/nicolasGolob/"><i class="fab fa-github"></i></a>
         </div>
-        <a href='#home' class="arrow"><i class="fas fa-arrow-circle-up"></i></a>
+        <a href='#home' class="arrow contact"><i class="fas fa-arrow-circle-up"></i></a>
     </section>
     <script type="text/javascript" src="Js/app.js"></script>
     <script type="text/javascript" src="Js/lightbox-plus-jquery.min.js"></script>
-
 </body>
 </html>
