scroll effects contact part

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet">
     <link href="Css/lightbox.min.css" rel="stylesheet">
     <link href="CSS/mediaQueries.css" rel="stylesheet">
@@ -45,7 +47,7 @@
         <div class="stories-picture-2" alt='misty forest with a man wearing a yellow rain jacket'></div>></div>
     </section>
     <section class="features-container" id="features">
-            <h2 class="features-title">Features</h2>
+            <h2 class="features-title galery">Features</h2>
             <div class="image1 galery">
                 <a data-lightbox="mygallery" href="image/view_of_a_road_from_a_forest.jpg"><img src="image/view_of_a_road_from_a_forest.jpg" alt="view_of_a_road_from_a_forest" class="galery-image"/></a>
             </div>
