responsive adjustments header

--- a/index.html
+++ b/index.html
@@ -27,15 +27,23 @@
 </head>
 <body>
     <header id="home">
-        <nav class="fade-in navbar" id="navigation">
-            <a href="#home" class="logo">
-                <h4>PICTURES</h4>
-            </a>
-            <div class="nav-links">
-                <a href="#stories" class="stories">Stories</a>
-                <a href="#features" class="features">Features</a>
-                <a href="#contact" class="contact">Contact</a>
-                <a class="burger""><i class="fas fa-bars"></i></a>
+        <nav class="navbar fade-in">
+            <a href="#home" class="logo">PICTURES</a>
+            <ul class="nav-links">
+                <li class="nav-item">
+                    <a href="#stories" class="nav-link">Stories</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#features" class="nav-link">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger-icon">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </nav>
         <h1 class="fade-in-main-title"> Let your soul speak </h1>
