--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mini-Project to training -> Pictures Website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Pictures Website " />
+    <meta property="og:description" content=" One page project for practice presenting a photography website"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./Image/forest_mist_main_image.jpg" />
+    <meta property="og:url" content="https://pictures-website-nicolasgolob.netlify.app/"/>
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
