--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Pictures Website " />
     <meta property="og:description" content=" One page project for practice presenting a photography website"/>
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./Image/forest_mist_main_image.jpg" />
+    <meta property="og:image" content="../image/forest_mist_main_image.jpg" />
     <meta property="og:url" content="https://pictures-website-nicolasgolob.netlify.app/"/>
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
