--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Mini-Project to training -> Pictures Website"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="image/logo.png" alt="logo" />
     <meta property="og:title" content="Pictures Website " />
     <meta property="og:description" content=" One page project for practice presenting a photography website"/>
     <meta property="og:type" content="website" />
