--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" media="only screen and (width:375px) and (height:812px)" href="Css/iphoneX.css">
     <link rel="stylesheet" media="only screen and (width:768px) and (height:1024px)" href="Css/ipad.css">
     <link rel="stylesheet" media="only screen and (width:1024px) and (height:1366px)" href="Css/ipad_pro.css">
+    <link rel="stylesheet" media="only screen and (width:280px) and (height:653px)" href="Css/galaxy_fold.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
