--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <link href="CSS/mediaQueries.css" rel="stylesheet">
     <link rel="stylesheet" media="only screen and (width:360px) and (height:640px)" href="Css/galaxy.css">
     <link rel="stylesheet" media="only screen and (width:411px) and (height:731px)" href="Css/pixel2.css">
+    <link rel="stylesheet" media="only screen and (width:411px) and (height:823px)" href="Css/pixel2_XL.css">
     <link rel="stylesheet" media="only screen and (width:320px) and (height:568px)" href="Css/iphone5_SE.css">
     <link rel="stylesheet" media="only screen and (width:375px) and (height:667px)" href="Css/iphone6_7_8.css">
     <link rel="stylesheet" media="only screen and (width:414px) and (height:736px)" href="Css/iphone6_7_8PLUS.css">
     <link rel="stylesheet" media="only screen and (width:375px) and (height:812px)" href="Css/iphoneX.css">
     <link rel="stylesheet" media="only screen and (width:768px) and (height:1024px)" href="Css/ipad.css">
+    <link rel="stylesheet" media="only screen and (width:540px) and (height:720px)" href="Css/surface_duo.css">
     <link rel="stylesheet" media="only screen and (width:1024px) and (height:1366px)" href="Css/ipad_pro.css">
+
     <link rel="stylesheet" media="only screen and (width:280px) and (height:653px)" href="Css/galaxy_fold.css">
     <script src="https://kit.fontawesome.com/0fdd1eeabf.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
